unpackaged/main/default/objects/Show__c/Show__c.object-meta.xml
<CustomObject>
    <description>A custom object that defines the details about a trade show.</description>
    <label>Show</label>
    <nameField>
        <label>Show Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shows</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>