unpackaged/main/default/objects/Show__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Account Name.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Shows (Account)</relationshipLabel>
    <relationshipName>Shows2</relationshipName>
    <type>Lookup</type>
</CustomField>