unpackaged/main/default/objects/Show__c/fields/AV_Amount__c.field-meta.xml
<CustomField>
    <fullName>AV_Amount__c</fullName>
    <label>AV Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>