unpackaged/main/default/objects/Show__c/fields/AV_current_year__c.field-meta.xml
<CustomField>
    <fullName>AV_current_year__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AV current year</label>
    <type>Checkbox</type>
</CustomField>