unpackaged/main/default/objects/Show__c/fields/AV_Currently_Under_Contract__c.field-meta.xml
<CustomField>
    <fullName>AV_Currently_Under_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to indicate AV under contract.</inlineHelpText>
    <label>AV Currently Under Contract</label>
    <type>Checkbox</type>
</CustomField>