unpackaged/main/default/objects/Show__c/fields/AV_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>AV_Expiration_Date__c</fullName>
    <inlineHelpText>AV contract expiration date.</inlineHelpText>
    <label>AV Expiration Date</label>
    <type>Date</type>
</CustomField>