unpackaged/main/default/objects/Show__c/fields/AV_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>AV_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>AV Opportunity Link.</inlineHelpText>
    <label>AV Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Shows (AV Opportunity)</relationshipLabel>
    <relationshipName>Shows_AV</relationshipName>
    <type>Lookup</type>
</CustomField>