unpackaged/main/default/objects/Show__c/fields/AV_Opportunityp__c.field-meta.xml
<CustomField>
    <fullName>AV_Opportunityp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AV Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Shows (AV Opportunity)</relationshipLabel>
    <relationshipName>Shows2</relationshipName>
    <type>Lookup</type>
</CustomField>