unpackaged/main/default/objects/Show__c/fields/AV_Provider__c.field-meta.xml
<CustomField>
    <fullName>AV_Provider__c</fullName>
    <inlineHelpText>AV Provider from current YRMO AV Opportunity.</inlineHelpText>
    <label>AV Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>