unpackaged/main/default/objects/Show__c/fields/AV_Region__c.field-meta.xml
<CustomField>
    <fullName>AV_Region__c</fullName>
    <inlineHelpText>AV Geographic Region.</inlineHelpText>
    <label>AV Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>