unpackaged/main/default/objects/Show__c/fields/AV_Stage__c.field-meta.xml
<CustomField>
    <fullName>AV_Stage__c</fullName>
    <label>AV Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>