unpackaged/main/default/objects/Show__c/fields/Competitor_Show_Visit__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Show_Visit__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Visited a competitor Show</inlineHelpText>
    <label>Competitor Show Visit</label>
    <type>Checkbox</type>
</CustomField>