unpackaged/main/default/objects/Show__c/fields/Cross_sell_Introduction_Made__c.field-meta.xml
<CustomField>
    <fullName>Cross_sell_Introduction_Made__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cross-sell Introduction Made</label>
    <type>Checkbox</type>
</CustomField>