unpackaged/main/default/objects/Show__c/fields/Exhibition_Amount__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Amount__c</fullName>
    <label>Exhibition Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>