unpackaged/main/default/objects/Show__c/fields/Exhibition_current_year__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_current_year__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exhibition current year</label>
    <type>Checkbox</type>
</CustomField>