unpackaged/main/default/objects/Show__c/fields/Exhibition_Currently_Under_Contract__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Currently_Under_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to indicate Exhibition under contract.</inlineHelpText>
    <label>Exhibition Currently Under Contract</label>
    <type>Checkbox</type>
</CustomField>