unpackaged/main/default/objects/Show__c/fields/Exhibition_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Expiration_Date__c</fullName>
    <inlineHelpText>Exhibition contract expiration date.</inlineHelpText>
    <label>Exhibition Expiration Date</label>
    <type>Date</type>
</CustomField>