unpackaged/main/default/objects/Show__c/fields/Exhibition_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Exhibition Opportunity Link.</inlineHelpText>
    <label>Exhibition Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Shows</relationshipLabel>
    <relationshipName>Shows</relationshipName>
    <type>Lookup</type>
</CustomField>