unpackaged/main/default/objects/Show__c/fields/Exhibition_Opportunitys_Job_Number__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Opportunitys_Job_Number__c</fullName>
    <formula>Housing_Opportunityp__r.Job_Number__c</formula>
    <label>Exhibition Opportunity&#39;s Job Number</label>
    <type>Text</type>
</CustomField>