unpackaged/main/default/objects/Show__c/fields/Exhibition_Provider__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Provider__c</fullName>
    <inlineHelpText>Exhibition Provider from current YRMO Exhibition Opportunity.</inlineHelpText>
    <label>Exhibition Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>