unpackaged/main/default/objects/Show__c/fields/Exhibition_Region__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Region__c</fullName>
    <inlineHelpText>Exhibition Geographic Region.</inlineHelpText>
    <label>Exhibition Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>