unpackaged/main/default/objects/Show__c/fields/Exhibition_Stage__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Stage__c</fullName>
    <label>Exhibition Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>