unpackaged/main/default/objects/Show__c/fields/Exhibitor_Marketing_Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>Exhibitor_Marketing_Decline_Reason__c</fullName>
    <description>Field used for account managers to identify why an organizer has declined email marketing for the exhibitors.</description>
    <label>Exhibitor Marketing Decline Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>