unpackaged/main/default/objects/Show__c/fields/Exhibitor_Marketing_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Exhibitor_Marketing_Preferences__c</fullName>
    <description>This field identifies what email preferences the show organizer has selected for us to email exhibitors before a show.</description>
    <inlineHelpText>Standard Email Package: US = 3 to 5 Emails
Extended Email Package: US = 5 to 7 Emails
Decline Email Marketing - The organizer does not want GES to email exhibitors</inlineHelpText>
    <label>Exhibitor Marketing Preferences</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Email Package</fullName>
                <default>true</default>
                <label>Standard Email Package</label>
            </value>
            <value>
                <fullName>Extended Email Package</fullName>
            </value>
            <value>
                <fullName>Decline Email Marketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>