unpackaged/main/default/objects/Show__c/fields/F2F_Meeting__c.field-meta.xml
<CustomField>
    <fullName>F2F_Meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Face to Face Meeting</inlineHelpText>
    <label>F2F Meeting</label>
    <type>Checkbox</type>
</CustomField>