unpackaged/main/default/objects/Show__c/fields/General_Show_Notes__c.field-meta.xml
<CustomField>
    <fullName>General_Show_Notes__c</fullName>
    <label>General Show Notes</label>
    <type>TextArea</type>
</CustomField>