unpackaged/main/default/objects/Show__c/fields/Good_Fit__c.field-meta.xml
<CustomField>
    <fullName>Good_Fit__c</fullName>
    <label>Good Fit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Blank</fullName>
                <isActive>false</isActive>
                <label>Blank</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>