unpackaged/main/default/objects/Show__c/fields/Housing_Amount__c.field-meta.xml
<CustomField>
    <fullName>Housing_Amount__c</fullName>
    <label>Housing Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>