unpackaged/main/default/objects/Show__c/fields/Housing_current_year__c.field-meta.xml
<CustomField>
    <fullName>Housing_current_year__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Housing current year</label>
    <type>Checkbox</type>
</CustomField>