unpackaged/main/default/objects/Show__c/fields/Housing_Currently_Under_Contract__c.field-meta.xml
<CustomField>
    <fullName>Housing_Currently_Under_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to indicate Housing under contract.</inlineHelpText>
    <label>Housing Currently Under Contract</label>
    <type>Checkbox</type>
</CustomField>