unpackaged/main/default/objects/Show__c/fields/Housing_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Housing_Expiration_Date__c</fullName>
    <inlineHelpText>Housing contract expiration date.</inlineHelpText>
    <label>Housing Expiration Date</label>
    <type>Date</type>
</CustomField>