unpackaged/main/default/objects/Show__c/fields/Housing_Not_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Housing_Not_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If client does not want or provide this service, check this box.</inlineHelpText>
    <label>Housing Not Applicable</label>
    <type>Checkbox</type>
</CustomField>