unpackaged/main/default/objects/Show__c/fields/Housing_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Housing_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Housing Opportunity Link.</inlineHelpText>
    <label>Housing Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Shows (Housing Opportunity)</relationshipLabel>
    <relationshipName>Shows_Housing</relationshipName>
    <type>Lookup</type>
</CustomField>