unpackaged/main/default/objects/Show__c/fields/Housing_Provider__c.field-meta.xml
<CustomField>
    <fullName>Housing_Provider__c</fullName>
    <inlineHelpText>Housing provider from current YRMO opportunity.</inlineHelpText>
    <label>Housing Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>