unpackaged/main/default/objects/Show__c/fields/Housing_Region__c.field-meta.xml
<CustomField>
    <fullName>Housing_Region__c</fullName>
    <inlineHelpText>Housing Geographic Region.</inlineHelpText>
    <label>Housing Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>