unpackaged/main/default/objects/Show__c/fields/Housing_Stage__c.field-meta.xml
<CustomField>
    <fullName>Housing_Stage__c</fullName>
    <label>Housing Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>