unpackaged/main/default/objects/Show__c/fields/Identified_Compelling_Event__c.field-meta.xml
<CustomField>
    <fullName>Identified_Compelling_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Identified Compelling Event</inlineHelpText>
    <label>Identified Compelling Event</label>
    <type>Checkbox</type>
</CustomField>