unpackaged/main/default/objects/Show__c/fields/Is_Non_signatory_Contact_Populated__c.field-meta.xml
<CustomField>
    <fullName>Is_Non_signatory_Contact_Populated__c</fullName>
    <formula>if(isblank(Non_signatory_Contact__c), &quot;No&quot;, &quot;Yes&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Non-signatory Contact Populated?</label>
    <type>Text</type>
</CustomField>