unpackaged/main/default/objects/Show__c/fields/Job_Classification__c.field-meta.xml
<CustomField>
    <fullName>Job_Classification__c</fullName>
    <inlineHelpText>Exhibition, Congress, Corporate Event or Consumer Event</inlineHelpText>
    <label>Job Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Exhibition</fullName>
            </value>
            <value>
                <fullName>Corporate Event</fullName>
            </value>
            <value>
                <fullName>Consumer Event</fullName>
            </value>
            <value>
                <fullName>Congress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>