unpackaged/main/default/objects/Show__c/fields/Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Portfolio__c</fullName>
    <formula>Text(Account__r.Portfolio__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is Show part of a GES Portfolio (5 Shows or more)?</inlineHelpText>
    <label>Portfolio</label>
    <type>Text</type>
</CustomField>