unpackaged/main/default/objects/Show__c/fields/Registration_Amount__c.field-meta.xml
<CustomField>
    <fullName>Registration_Amount__c</fullName>
    <label>Registration Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>