unpackaged/main/default/objects/Show__c/fields/Registration_current_year__c.field-meta.xml
<CustomField>
    <fullName>Registration_current_year__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Registration current year</label>
    <type>Checkbox</type>
</CustomField>