unpackaged/main/default/objects/Show__c/fields/Registration_Currently_Under_Contract__c.field-meta.xml
<CustomField>
    <fullName>Registration_Currently_Under_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to indicate Registration under contract.</inlineHelpText>
    <label>Registration Currently Under Contract</label>
    <type>Checkbox</type>
</CustomField>