unpackaged/main/default/objects/Show__c/fields/Registration_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Expiration_Date__c</fullName>
    <inlineHelpText>Registration contract expiration date.</inlineHelpText>
    <label>Registration Expiration Date</label>
    <type>Date</type>
</CustomField>