unpackaged/main/default/objects/Show__c/fields/Registration_Not_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Registration_Not_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If client does not want or provide this service, check this box.</inlineHelpText>
    <label>Registration Not Applicable</label>
    <type>Checkbox</type>
</CustomField>