unpackaged/main/default/objects/Show__c/fields/Registration_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Registration_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Registration Opportunity Link.</inlineHelpText>
    <label>Registration Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Shows (Registration Opportunity)</relationshipLabel>
    <relationshipName>Shows_Registration</relationshipName>
    <type>Lookup</type>
</CustomField>