unpackaged/main/default/objects/Show__c/fields/Registration_Opportunityp__c.field-meta.xml
<CustomField>
    <fullName>Registration_Opportunityp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registration Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Shows (Registration Opportunity)</relationshipLabel>
    <relationshipName>Shows4</relationshipName>
    <type>Lookup</type>
</CustomField>