unpackaged/main/default/objects/Show__c/fields/Registration_Provider__c.field-meta.xml
<CustomField>
    <fullName>Registration_Provider__c</fullName>
    <inlineHelpText>Registration Provider from current YRMO Registration Opportunity.</inlineHelpText>
    <label>Registration Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>