unpackaged/main/default/objects/Show__c/fields/Registration_Region__c.field-meta.xml
<CustomField>
    <fullName>Registration_Region__c</fullName>
    <inlineHelpText>Registration Geographic Region.</inlineHelpText>
    <label>Registration Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>