unpackaged/main/default/objects/Show__c/fields/Registration_Stage__c.field-meta.xml
<CustomField>
    <fullName>Registration_Stage__c</fullName>
    <label>Registration Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>