unpackaged/main/default/objects/Show__c/fields/Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>Sales_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>GES Sales Person.</inlineHelpText>
    <label>Sales Person</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Shows</relationshipName>
    <type>Lookup</type>
</CustomField>