unpackaged/main/default/objects/Show__c/fields/Salesperson_Not_Owner__c.field-meta.xml
<CustomField>
    <fullName>Salesperson_Not_Owner__c</fullName>
    <formula>IF( Sales_Person__r.Id  &lt;&gt; OwnerId , &quot;Yes&quot;, &quot;No&quot;)</formula>
    <label>Salesperson Not Owner</label>
    <type>Text</type>
</CustomField>