unpackaged/main/default/objects/Show__c/fields/Show_Function_Type__c.field-meta.xml
<CustomField>
    <fullName>Show_Function_Type__c</fullName>
    <label>Show Function Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>I:Independent Organizer</fullName>
            </value>
            <value>
                <fullName>M:Show Mgmt</fullName>
            </value>
            <value>
                <fullName>S:Subcontract</fullName>
            </value>
            <value>
                <fullName>U:Union</fullName>
            </value>
            <value>
                <fullName>A:Association</fullName>
            </value>
            <value>
                <fullName>B:B-B Media/Portfolio Accounts</fullName>
            </value>
            <value>
                <fullName>C:Corporation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>