unpackaged/main/default/objects/Show__c/fields/Show_ID__c.field-meta.xml
<CustomField>
    <fullName>Show_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Legacy System Identifier.</inlineHelpText>
    <label>Show ID (LMS)</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>