unpackaged/main/default/objects/Show__c/fields/Show_Inactive__c.field-meta.xml
<CustomField>
    <fullName>Show_Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if show is cancelled and no longer active.</inlineHelpText>
    <label>Show Inactive</label>
    <type>Checkbox</type>
</CustomField>