unpackaged/main/default/objects/Show__c/fields/Show_Type__c.field-meta.xml
<CustomField>
    <fullName>Show_Type__c</fullName>
    <inlineHelpText>CEIR Industry Groupings</inlineHelpText>
    <label>Show Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Services</fullName>
            </value>
            <value>
                <fullName>Consumer Goods and Retail Trade</fullName>
            </value>
            <value>
                <fullName>Discretionary Consumer Goods &amp; Services</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Food Sector</fullName>
            </value>
            <value>
                <fullName>Financial, Legal and Real Estate</fullName>
            </value>
            <value>
                <fullName>Government, Public &amp; Non-Profit Services</fullName>
            </value>
            <value>
                <fullName>Building, Construction, Home &amp; Repair</fullName>
            </value>
            <value>
                <fullName>Industrial / Heavy Machinery / Finished Business Outputs</fullName>
            </value>
            <value>
                <fullName>Communications &amp; Information Technology</fullName>
            </value>
            <value>
                <fullName>Medical &amp; Healthcare</fullName>
            </value>
            <value>
                <fullName>Raw Materials &amp; Science</fullName>
            </value>
            <value>
                <fullName>Sporting Goods, Travel and Amusement</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Museum, Traveling Exhibition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>