unpackaged/main/default/objects/Show__c/fields/Shows_Count__c.field-meta.xml
<CustomField>
    <fullName>Shows_Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shows Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>