unpackaged/main/default/objects/Show__c/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <inlineHelpText>Please select the relevant sub type</inlineHelpText>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Show_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Advertising/Marketing</fullName>
            </value>
            <value>
                <fullName>Aerospace and Aviation</fullName>
            </value>
            <value>
                <fullName>Agriculture and Farming</fullName>
            </value>
            <value>
                <fullName>Air Conditioning, Heating and Refrigeration</fullName>
            </value>
            <value>
                <fullName>Amusement</fullName>
            </value>
            <value>
                <fullName>Apparel</fullName>
            </value>
            <value>
                <fullName>Architecture</fullName>
            </value>
            <value>
                <fullName>Art</fullName>
            </value>
            <value>
                <fullName>Associations</fullName>
            </value>
            <value>
                <fullName>Audio-Visual</fullName>
            </value>
            <value>
                <fullName>Automotive and Trucking</fullName>
            </value>
            <value>
                <fullName>Banking</fullName>
            </value>
            <value>
                <fullName>Beauty and Personal Care</fullName>
            </value>
            <value>
                <fullName>Boats</fullName>
            </value>
            <value>
                <fullName>Building and Construction</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Ceramics and Glass</fullName>
            </value>
            <value>
                <fullName>Chemical</fullName>
            </value>
            <value>
                <fullName>Communications</fullName>
            </value>
            <value>
                <fullName>Computers and Computer Applications</fullName>
            </value>
            <value>
                <fullName>Consumer Services</fullName>
            </value>
            <value>
                <fullName>Death Care Services</fullName>
            </value>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Electrical and Electronics</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Fire and Fire Protection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>