unpackaged/main/default/objects/Show__c/fields/Sync_with_Marketo__c.field-meta.xml
<CustomField>
    <fullName>Sync_with_Marketo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync with Marketo</label>
    <type>Checkbox</type>
</CustomField>