unpackaged/main/default/objects/Show__c/fields/TSE_Fastest_50__c.field-meta.xml
<CustomField>
    <fullName>TSE_Fastest_50__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TSE Fastest 50</label>
    <type>Checkbox</type>
</CustomField>