unpackaged/main/default/objects/Show__c/fields/TSE_Gold_100__c.field-meta.xml
<CustomField>
    <fullName>TSE_Gold_100__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Show is TSE Gold 100 Listing, from previous year.</inlineHelpText>
    <label>TSE Gold 100</label>
    <type>Checkbox</type>
</CustomField>