unpackaged/main/default/objects/Show__c/fields/Under_Contract__c.field-meta.xml
<CustomField>
    <fullName>Under_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked if not available to bid.</inlineHelpText>
    <label>Under Contract</label>
    <type>Checkbox</type>
</CustomField>