unpackaged/main/default/objects/Show__c/fields/US_Top_100_Congress__c.field-meta.xml
<CustomField>
    <fullName>US_Top_100_Congress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>US HCEA 50</label>
    <type>Checkbox</type>
</CustomField>