unpackaged/main/default/objects/Show__c/fields/US_Top_100_Corporate_Event__c.field-meta.xml
<CustomField>
    <fullName>US_Top_100_Corporate_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>US Top 100 Corporate Event</label>
    <type>Checkbox</type>
</CustomField>