unpackaged/main/default/objects/Show__c/fields/US_TSNN_Top_250__c.field-meta.xml
<CustomField>
    <fullName>US_TSNN_Top_250__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Listed on TSNN Top 250 Show&#39;s.</inlineHelpText>
    <label>US TSNN Top 250</label>
    <type>Checkbox</type>
</CustomField>