unpackaged/main/default/objects/Show__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <inlineHelpText>Show Website.</inlineHelpText>
    <label>Website</label>
    <type>Url</type>
</CustomField>