unpackaged/main/default/objects/Show__c/recordTypes/Traveling_Exhibition.recordType-meta.xml
<RecordType>
    <fullName>Traveling_Exhibition</fullName>
    <active>true</active>
    <description>Used by Branded Entertainment to capturing competitor Exhibitions</description>
    <label>Traveling Exhibition</label>
</RecordType>