unpackaged/main/default/objects/Show__c/validationRules/Cannot_Edit_Job_Classification_Reviewed.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Edit_Job_Classification_Reviewed</fullName>
    <active>true</active>
    <description>Only System admins can edit Job Classification Field. Please reach out to Craig Dingwall.</description>
    <errorConditionFormula>AND(ISCHANGED(Job_Classification_Reviewed__c),$Profile.Name &lt;&gt; &#39;System Administrator&#39;)</errorConditionFormula>
    <errorDisplayField>Job_Classification_Reviewed__c</errorDisplayField>
    <errorMessage>Do not have permission to Edit the Field</errorMessage>
</ValidationRule>